--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     
 
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <title>React App</title>
   </head>
   <body>
